@@ -40,5 +40,7 @@ void glatex_kb_format_right(G_GNUC_UNUSED guint key_id);
 void glatex_kb_insert_description_list(G_GNUC_UNUSED guint key_id);
 void glatex_kb_insert_itemize_list(G_GNUC_UNUSED guint key_id);
 void glatex_kb_insert_enumerate_list(G_GNUC_UNUSED guint key_id);
+void glatex_kb_structure_lvlup(G_GNUC_UNUSED guint key_id);
+void glatex_kb_structure_lvldown(G_GNUC_UNUSED guint key_id);
 
 #endif
