@@ -1,3 +1,8 @@
+2009-07-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Added a function to level up and level down structure element.
+
+
 2009-07-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Migrated bibTeX inserting entry framework to make usage of a GPtrArray.
